# bliplop

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BlipLop.cpp  CJavaBridge.cpp  CMakeLists.txt  DuplexEngine.cpp
app/src/main/cpp/include/: BlipLop.h  DuplexCallback.h  DuplexEngine.h  FunctionList.h  Log.h  OboeSinePlayer.h
app/src/main/cpp/include/archive/: OboeSinePlayer.h
app/src/main/java/com/tekinatawar/bliplop/: BlipLopLoggingModel.kt  BlipLopModel.kt  BlipLopNativeModel.kt  BlipLopViewModel.kt  MainActivity.kt
app/src/main/java/com/tekinatawar/bliplop/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
